@@ -1,3 +1,10 @@
+2018-08-05 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c:
+	  Improve error message on unbalanced stack.
+	* support/regression/tests/bug-2793.c:
+	  Test for bug #2793.
+
 2018-08-03 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCsymt.c:
